@@ -19,7 +19,6 @@ package net.fabricmc.loader;
 import net.fabricmc.loader.api.metadata.ModMetadata;
 import net.fabricmc.loader.language.LanguageAdapter;
 import net.fabricmc.loader.metadata.LoaderModMetadata;
-import net.fabricmc.loader.metadata.ModMetadataV0;
 import net.fabricmc.loader.util.FileSystemUtil;
 import net.fabricmc.loader.util.UrlConversionException;
 import net.fabricmc.loader.util.UrlUtil;
@@ -94,7 +93,7 @@ public class ModContainer implements net.fabricmc.loader.api.ModContainer {
 	private LanguageAdapter createAdapter() {
 		return adapterMap.computeIfAbsent(info.getLanguageAdapter(), (adapter) -> {
 			try {
-				return (LanguageAdapter) Class.forName(adapter).newInstance();
+				return (LanguageAdapter) Class.forName(adapter).getDeclaredConstructor().newInstance();
 			} catch (Exception e) {
 				throw new RuntimeException(String.format("Unable to create language adapter %s for mod %s", adapter, info.getId()), e);
 			}
